# Modulus

./: 00_PACKAGE_SUMMARY.md  CMakeLists.txt  CTestTestfile.cmake  IMPLEMENTATION_GUIDE.md  Makefile  QUICK_REFERENCE.md  README.md  base.h  block_library.cpp  block_library.h  cad_adapter.cpp  cad_adapter.h  cmake_install.cmake  core.h  exports.def  modulus_dock.cpp  modulus_dock.h  modulus_dock_panel.cpp  modulus_dock_panel.h  panel.cpp  panel.h  plugin_main.cpp  ui_panel.cpp
